--- a/index.html
+++ b/index.html
@@ -2,47 +2,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Çağatay Portfolio</title>
+  <title>Çağatay Çokan Portfolio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(to right, #4A90E2, #9013FE);
-      color: white;
+      background: #1e1e2f;
+      color: #f5f5f5;
+      line-height: 1.6;
     }
-    header { text-align: center; padding: 50px 20px; }
-    h1 { margin: 0; font-size: 3em; }
-    h2 { margin-top: 10px; font-weight: normal; }
+    header {
+      text-align: center;
+      padding: 50px 20px;
+      background: #282846;
+    }
+    header h1 { margin: 0; font-size: 3em; }
+    header h2 { margin-top: 10px; font-weight: normal; color: #ccc; }
     section { max-width: 800px; margin: 50px auto; padding: 0 20px; }
-    a { color: #FFD700; text-decoration: none; }
+    h2.section-title { border-bottom: 2px solid #4A90E2; padding-bottom: 5px; }
+    ul { list-style: none; padding: 0; }
+    li { margin-bottom: 15px; }
+    a {
+      color: #4A90E2;
+      text-decoration: none;
+      font-weight: bold;
+    }
     a:hover { text-decoration: underline; }
-    .project { background: rgba(0,0,0,0.3); padding: 20px; margin-bottom: 20px; border-radius: 10px; }
   </style>
 </head>
 <body>
   <header>
-    <h1>Hello, I'm Çağatay</h1>
-    <h2>Cloud & DevOps Engineer | AWS Enthusiast</h2>
-    <p><a href="https://github.com/cagataycokan">GitHub Repo’larım</a></p>
+    <h1>Çağatay Çokan</h1>
+    <h2>CloudOps & AWS SysOps Portfolio</h2>
   </header>
 
   <section>
-    <h2>Projects</h2>
+    <h2 class="section-title">Certificates</h2>
+    <ul>
+      <li><a href="https://drive.google.com/file/d/1z_obc1NOGSXRyH64GpbL-BMgnrPdNHfr/view" target="_blank">Certificate 1</a></li>
+      <li><a href="https://drive.google.com/file/d/184H-u-qaAg_VEYwgkAUALYb5UUk_JHe6/view" target="_blank">Certificate 2</a></li>
+      <li><a href="https://drive.google.com/file/d/1Bdm4NIFab65Rt8xdNY3tuR0Nw_xaVL0G/view" target="_blank">Certificate 3</a></li>
+      <!-- Yeni sertifikalar buraya eklenebilir -->
+    </ul>
+  </section>
 
-    <div class="project">
-      <h3>AWS SysOps Automation</h3>
-      <p>EC2, S3, CloudWatch kullanarak otomasyon ve monitoring projeleri geliştirdim.</p>
-      <a href="https://github.com/cagataycokan/aws-sysops-project">Repoyu Gör</a>
-    </div>
-
-    <div class="project">
-      <h3>CloudOps Infrastructure</h3>
-      <p>AWS CloudFormation ve Terraform kullanarak altyapı yönetimi ve deploy projeleri.</p>
-      <a href="https://github.com/cagataycokan/cloudops-infra">Repoyu Gör</a>
-    </div>
-    
-    <!-- Yeni projeler buraya eklenebilir -->
+  <section>
+    <h2 class="section-title">Projects</h2>
+    <ul>
+      <li><a href="https://drive.google.com/file/d/1DnEJlHzTOiIDx1dybwUwKoVHbdGdMJhL/view" target="_blank">Project 1</a></li>
+      <li><a href="https://drive.google.com/file/d/1XroqX9Dy1zDJElq09_qc4zw73dmsicHU/view" target="_blank">Project 2</a></li>
+      <!-- Yeni projeler buraya eklenebilir -->
+    </ul>
   </section>
 
 </body>
