--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 </head>
 <body>
   <header>
-    <h1>Çağatay Çokan</h1>
-    <h2>CloudOps & AWS SysOps Portfolio</h2>
+    <h1>Çağatay Çokan | CloudOps & AWS SysOps Portfolio</h1>
+    <h2>Hands-on AWS SysOps and CloudOps projects showcasing my experience in system automation, monitoring, and cloud infrastructure management.</h2>
   </header>
 
   <section>
     <h2 class="section-title">Certificates</h2>
     <ul>
-      <li><a href="https://drive.google.com/file/d/1z_obc1NOGSXRyH64GpbL-BMgnrPdNHfr/view" target="_blank">Certificate 1</a></li>
-      <li><a href="https://drive.google.com/file/d/184H-u-qaAg_VEYwgkAUALYb5UUk_JHe6/view" target="_blank">Certificate 2</a></li>
-      <li><a href="https://drive.google.com/file/d/1Bdm4NIFab65Rt8xdNY3tuR0Nw_xaVL0G/view" target="_blank">Certificate 3</a></li>
+      <li><a href="https://drive.google.com/file/d/1HmZS2IvbtxlO9Euhsd5hpip3dW_lSOOi/view" target="_blank">AWS Certified Cloud Practitioner certificate</a></li>
+      <li><a href="https://drive.google.com/file/d/1niifGEqTZ1gtOQQcnr59hZXZ2lZDYZOi/view" target="_blank">Attacking and Defending AWS</a></li>
+      <li><a href="https://drive.google.com/file/d/1K9QepeCt_ttRh_P6VFweoEo4Agr2kR8g/view" target="_blank">IELTS(International English Language Testing System) Certificate</a></li>
       <!-- Yeni sertifikalar buraya eklenebilir -->
     </ul>
   </section>
@@ -50,8 +50,14 @@
   <section>
     <h2 class="section-title">Projects</h2>
     <ul>
-      <li><a href="https://drive.google.com/file/d/1DnEJlHzTOiIDx1dybwUwKoVHbdGdMJhL/view" target="_blank">Project 1</a></li>
-      <li><a href="https://drive.google.com/file/d/1XroqX9Dy1zDJElq09_qc4zw73dmsicHU/view" target="_blank">Project 2</a></li>
+      <li><a href="https://drive.google.com/file/d/1Hgk0CvSeIV3ZKt7Y4bsFxYCzMl6rgzMH/view" target="_blank">Launch a Kubernetes Cluster - EKS 1</a></li>
+      <li><a href="https://drive.google.com/file/d/16vbqZBJGGKzNHt8lhrPZ9adOla_OqBQG/view" target="_blank">Set Up Kubernetes Deployment - EKS 2</a></li>
+      <li><a href="https://drive.google.com/file/d/1z_obc1NOGSXRyH64GpbL-BMgnrPdNHfr/view" target="_blank">Create Kubernetes Manifests - EKS 3</a></li>
+      <li><a href="https://drive.google.com/file/d/184H-u-qaAg_VEYwgkAUALYb5UUk_JHe6/view" target="_blank">Deploy Backend with Kubernetes - EKS 4</a></li>
+      <li><a href="https://drive.google.com/file/d/1Bdm4NIFab65Rt8xdNY3tuR0Nw_xaVL0G/view" target="_blank"></a></li>
+      <li><a href="link" target="_blank">AÇIKLAMA</a></li>
+  
+      
       <!-- Yeni projeler buraya eklenebilir -->
     </ul>
   </section>
