Updated to make dynamic index.html

--- a/index.html
+++ b/index.html
@@ -92,17 +92,30 @@
 <section>
   <h2 class="section-title">Projects</h2>
   <ul>
-    <li><a href="https://drive.google.com/file/d/1Hgk0CvSeIV3ZKt7Y4bsFxYCzMl6rgzMH/view" target="_blank">Launch a Kubernetes Cluster - EKS 1</a></li>
-    <li><a href="https://drive.google.com/file/d/16vbqZBJGGKzNHt8lhrPZ9adOla_OqBQG/view" target="_blank">Set Up Kubernetes Deployment - EKS 2</a></li>
-    <li><a href="https://drive.google.com/file/d/1z_obc1NOGSXRyH64GpbL-BMgnrPdNHfr/view" target="_blank">Create Kubernetes Manifests - EKS 3</a></li>
-    <li><a href="https://drive.google.com/file/d/184H-u-qaAg_VEYwgkAUALYb5UUk_JHe6/view" target="_blank">Deploy Backend with Kubernetes - EKS 4</a></li>
-    <li><a href="https://drive.google.com/file/d/1Bdm4NIFab65Rt8xdNY3tuR0Nw_xaVL0G/view" target="_blank">Create S3 Buckets with Terraform</a></li>
-    <li><a href="https://drive.google.com/file/d/1DnEJlHzTOiIDx1dybwUwKoVHbdGdMJhL/view" target="_blank">Build a Security Monitoring System</a></li>
-    <li><a href="https://drive.google.com/file/d/1XroqX9Dy1zDJElq09_qc4zw73dmsicHU/view" target="_blank">Secure Secrets with Secrets Manager</a></li>
-    <li><a href="https://drive.google.com/file/d/16MCA1OfCJjRWOtC7pdoap64j_-vOsovX/view" target="_blank">Connect a Web App to Amazon Aurora - Part 1</a></li>
-    <li><a href="https://drive.google.com/file/d/1ACGheIpCGocbAV8tasXO1a-5I_ryL34V/view" target="_blank">Connect a Web App to Amazon Aurora - Part 2</a></li>
-    <li><a href="https://drive.google.com/file/d/1K7hnlku8JkMqX6Xsq0CxKGjr4U9IzxDC/view" target="_blank">Threat Detection with GuardDuty</a></li>
-    <!-- Yeni projeler buraya eklenebilir -->
+      <li><a href="https://drive.google.com/file/d/1Hgk0CvSeIV3ZKt7Y4bsFxYCzMl6rgzMH/view" target="_blank">Launch a Kubernetes Cluster - EKS 1</a></li>
+      <li><a href="https://drive.google.com/file/d/16vbqZBJGGKzNHt8lhrPZ9adOla_OqBQG/view" target="_blank">Set Up Kubernetes Deployment - EKS 2</a></li>
+      <li><a href="https://drive.google.com/file/d/1z_obc1NOGSXRyH64GpbL-BMgnrPdNHfr/view" target="_blank">Create Kubernetes Manifests - EKS 3</a></li>
+      <li><a href="https://drive.google.com/file/d/184H-u-qaAg_VEYwgkAUALYb5UUk_JHe6/view" target="_blank">Deploy Backend with Kubernetes - EKS 4</a></li>
+      <li><a href="https://drive.google.com/file/d/1Bdm4NIFab65Rt8xdNY3tuR0Nw_xaVL0G/view" target="_blank">Create S3 Buckets with Terraform</a></li>
+      <li><a href="https://drive.google.com/file/d/1DnEJlHzTOiIDx1dybwUwKoVHbdGdMJhL/view" target="_blank">Build a Security Monitoring System</a></li>
+      <li><a href="https://drive.google.com/file/d/1XroqX9Dy1zDJElq09_qc4zw73dmsicHU/view" target="_blank">Secure Secrets with Secrets Manager</a></li>
+      <li><a href="https://drive.google.com/file/d/16MCA1OfCJjRWOtC7pdoap64j_-vOsovX/view" target="_blank">Connect a Web App to Amazon Aurora - Part 1</a></li>
+      <li><a href="https://drive.google.com/file/d/1ACGheIpCGocbAV8tasXO1a-5I_ryL34V/view" target="_blank">Connect a Web App to Amazon Aurora - Part 2</a></li>
+      <li><a href="https://drive.google.com/file/d/1K7hnlku8JkMqX6Xsq0CxKGjr4U9IzxDC/view" target="_blank">Threat Detection with GuardDuty</a></li>
+      <li><a href="https://drive.google.com/file/d/19rc9tiYpweymqPUUfD0ULlcPwMDq6Zn3/view" target="_blank">Encrypt Data with AWS KMS</a></li>
+      <li><a href="https://drive.google.com/file/d/1OOz_Az5m3gZRTArFtWlF-9mUmDi3WVlQ/view" target="_blank">Host a Website on Amazon S3</a></li>
+      <li><a href="https://drive.google.com/file/d/1dpbmivHcXB8dp7bds91K_CDxoY1Wb43L/view" target="_blank">Query Data with DynamoDB</a></li>
+      <li><a href="https://drive.google.com/file/d/172_TG-CGeLg_tJq4eGf3OVFRJMv3gXFZ/view" target="_blank">Load Data into a DynamoDB Table</a></li>
+      <li><a href="https://drive.google.com/file/d/1jPJv-jrVE_wIyIHO39echnmBDp2aPaVX/view" target="_blank">VPC Endpoints</a></li>
+      <li><a href="https://drive.google.com/file/d/1bMjvAq8C-EJRgtXPCobgX_bYzLLgCs56/view" target="_blank">Access S3 from a VPC</a></li>
+      <li><a href="https://drive.google.com/file/d/1pe1GrPixnHdSWbJ_PBQku7GFQ_mxbsW3/view" target="_blank">VPC Monitoring with Flow Logs</a></li>
+      <li><a href="https://drive.google.com/file/d/1_FQp4dWOImO8lOIM8hlyrwMzufFk4lNv/view" target="_blank">Testing VPC Connectivity</a></li>
+      <li><a href="https://drive.google.com/file/d/1vLN74dnPsinV8Bo1q1RjhVoL8SUegVRC/view" target="_blank">Launching VPC Resources</a></li>
+      <li><a href="https://drive.google.com/file/d/112GiYQxx_Ff1-WF6OfwuzKqxZIjdkp3z/view" target="_blank">Creating a Private Subnet</a></li>
+      <li><a href="https://drive.google.com/file/d/13mv2YpYq_NRZxYA_KBayCfG1K8-kU7e0/view" target="_blank">VPC Traffic Flow and Security</a></li>
+      <li><a href="https://drive.google.com/file/d/1unc7sX1Hcx-2e2nwSlO7U1tChi_8K5FF/view" target="_blank">Build a Virtual Private Cloud (VPC)</a></li>
+      <li><a href="https://drive.google.com/file/d/1mP7OEk9PmEnd3m9W2jEMVMLshJ91nYrw/view" target="_blank">Cloud Security with AWS IAM</a></li>
+    <!-- <li><a href="LINK" target="_blank">AÇIKLAMA</a></li> -->
   </ul>
 </section>
 
