--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 <section>
   <h2 class="section-title">Projects</h2>
   <ul>
+      <li><a href="hhttps://drive.google.com/file/d/12PTKL7CDt7QaunrdyW-Dnf_OUidS6Wwz/view?usp=sharing" target="_blank">Threat Detection with GuardDuty</a></li>
       <li><a href="https://drive.google.com/file/d/1nvvpd3Xg7sricLP57PkQhkyfBy2NGC_F/view?usp=sharing" target="_blank">Build a Security Monitoring System</a></li>  
       <li><a href="https://drive.google.com/file/d/1Hgk0CvSeIV3ZKt7Y4bsFxYCzMl6rgzMH/view" target="_blank">Launch a Kubernetes Cluster - EKS 1</a></li>
       <li><a href="https://drive.google.com/file/d/16vbqZBJGGKzNHt8lhrPZ9adOla_OqBQG/view" target="_blank">Set Up Kubernetes Deployment - EKS 2</a></li>
@@ -101,7 +102,6 @@
       <li><a href="https://drive.google.com/file/d/1XroqX9Dy1zDJElq09_qc4zw73dmsicHU/view" target="_blank">Secure Secrets with Secrets Manager</a></li>
       <li><a href="https://drive.google.com/file/d/16MCA1OfCJjRWOtC7pdoap64j_-vOsovX/view" target="_blank">Connect a Web App to Amazon Aurora - Part 1</a></li>
       <li><a href="https://drive.google.com/file/d/1ACGheIpCGocbAV8tasXO1a-5I_ryL34V/view" target="_blank">Connect a Web App to Amazon Aurora - Part 2</a></li>
-      <li><a href="https://drive.google.com/file/d/1K7hnlku8JkMqX6Xsq0CxKGjr4U9IzxDC/view" target="_blank">Threat Detection with GuardDuty</a></li>
       <li><a href="https://drive.google.com/file/d/19rc9tiYpweymqPUUfD0ULlcPwMDq6Zn3/view" target="_blank">Encrypt Data with AWS KMS</a></li>
       <li><a href="https://drive.google.com/file/d/1OOz_Az5m3gZRTArFtWlF-9mUmDi3WVlQ/view" target="_blank">Host a Website on Amazon S3</a></li>
       <li><a href="https://drive.google.com/file/d/1dpbmivHcXB8dp7bds91K_CDxoY1Wb43L/view" target="_blank">Query Data with DynamoDB</a></li>
