--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <section>
   <h2 class="section-title">Projects</h2>
   <ul>
-      <li><a href="hhttps://drive.google.com/file/d/12PTKL7CDt7QaunrdyW-Dnf_OUidS6Wwz/view?usp=sharing" target="_blank">Threat Detection with GuardDuty</a></li>
+      <li><a href="https://drive.google.com/file/d/12PTKL7CDt7QaunrdyW-Dnf_OUidS6Wwz/view?usp=sharing" target="_blank">Threat Detection with GuardDuty</a></li>
       <li><a href="https://drive.google.com/file/d/1nvvpd3Xg7sricLP57PkQhkyfBy2NGC_F/view?usp=sharing" target="_blank">Build a Security Monitoring System</a></li>  
       <li><a href="https://drive.google.com/file/d/1Hgk0CvSeIV3ZKt7Y4bsFxYCzMl6rgzMH/view" target="_blank">Launch a Kubernetes Cluster - EKS 1</a></li>
       <li><a href="https://drive.google.com/file/d/16vbqZBJGGKzNHt8lhrPZ9adOla_OqBQG/view" target="_blank">Set Up Kubernetes Deployment - EKS 2</a></li>
