--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 <section>
   <h2 class="section-title">Projects</h2>
   <ul>
+      <li><a href="https://drive.google.com/file/d/1sDN0DIHCgokz-VodFeHduxT2cRevAzj7/view?usp=sharing" target="_blank">EC2 and Secure Secrets with Secrets Manager</a></li>
       <li><a href="https://drive.google.com/file/d/1Djjx2q5S4MWGC3ea-iaFZlgZpY4d7M0M/view?usp=sharing" target="_blank">Encrypt Data with AWS KMS</a></li>
       <li><a href="https://drive.google.com/file/d/12PTKL7CDt7QaunrdyW-Dnf_OUidS6Wwz/view?usp=sharing" target="_blank">Threat Detection with GuardDuty</a></li>
       <li><a href="https://drive.google.com/file/d/1nvvpd3Xg7sricLP57PkQhkyfBy2NGC_F/view?usp=sharing" target="_blank">Build a Security Monitoring System</a></li>  
@@ -100,7 +101,6 @@
       <li><a href="https://drive.google.com/file/d/1z_obc1NOGSXRyH64GpbL-BMgnrPdNHfr/view" target="_blank">Create Kubernetes Manifests - EKS 3</a></li>
       <li><a href="https://drive.google.com/file/d/184H-u-qaAg_VEYwgkAUALYb5UUk_JHe6/view" target="_blank">Deploy Backend with Kubernetes - EKS 4</a></li>
       <li><a href="https://drive.google.com/file/d/1Bdm4NIFab65Rt8xdNY3tuR0Nw_xaVL0G/view" target="_blank">Create S3 Buckets with Terraform</a></li>
-      <li><a href="https://drive.google.com/file/d/1XroqX9Dy1zDJElq09_qc4zw73dmsicHU/view" target="_blank">Secure Secrets with Secrets Manager</a></li>
       <li><a href="https://drive.google.com/file/d/16MCA1OfCJjRWOtC7pdoap64j_-vOsovX/view" target="_blank">Connect a Web App to Amazon Aurora - Part 1</a></li>
       <li><a href="https://drive.google.com/file/d/1ACGheIpCGocbAV8tasXO1a-5I_ryL34V/view" target="_blank">Connect a Web App to Amazon Aurora - Part 2</a></li>
       <li><a href="https://drive.google.com/file/d/1OOz_Az5m3gZRTArFtWlF-9mUmDi3WVlQ/view" target="_blank">Host a Website on Amazon S3</a></li>
