--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 <section>
   <h2 class="section-title">Projects</h2>
   <ul>
+    
+      <li><a href="https://drive.google.com/file/d/1FgEe1aBDUIZXGOuMgVh7mI-6UAYw4ngg/view?usp=sharing" target="_blank">Website Delivery with CloudFront in Private, Presentation tier</a></li>
       <li><a href="https://drive.google.com/file/d/1sDN0DIHCgokz-VodFeHduxT2cRevAzj7/view?usp=sharing" target="_blank">EC2 and Secure Secrets with Secrets Manager</a></li>
       <li><a href="https://drive.google.com/file/d/1Djjx2q5S4MWGC3ea-iaFZlgZpY4d7M0M/view?usp=sharing" target="_blank">Encrypt Data with AWS KMS</a></li>
       <li><a href="https://drive.google.com/file/d/12PTKL7CDt7QaunrdyW-Dnf_OUidS6Wwz/view?usp=sharing" target="_blank">Threat Detection with GuardDuty</a></li>
