--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 <section>
   <h2 class="section-title">Projects</h2>
   <ul>
-    
+
+      <li><a href="https://drive.google.com/file/d/1Lyvwv_8bhHDM5Wyz0LPmUrDYh8LxwnHo/view?usp=sharing" target="_blank">Setting Up APIs with Lambda +API Gateway and Fetch Data with AWS Lambda, Logic Tier and Data Tier
+</a></li>
       <li><a href="https://drive.google.com/file/d/1FgEe1aBDUIZXGOuMgVh7mI-6UAYw4ngg/view?usp=sharing" target="_blank">Website Delivery with CloudFront in Private, Presentation tier</a></li>
       <li><a href="https://drive.google.com/file/d/1sDN0DIHCgokz-VodFeHduxT2cRevAzj7/view?usp=sharing" target="_blank">EC2 and Secure Secrets with Secrets Manager</a></li>
       <li><a href="https://drive.google.com/file/d/1Djjx2q5S4MWGC3ea-iaFZlgZpY4d7M0M/view?usp=sharing" target="_blank">Encrypt Data with AWS KMS</a></li>
