--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <section>
   <h2 class="section-title">Projects</h2>
   <ul>
-
+      <li><a href="https://drive.google.com/file/d/1a-QQe5m1249_kaNiFloXYVBqt2xpJjbw/view?usp=sharing" target="_blank">TERRAFORM GUIDE</a></li>
       <li><a href="https://drive.google.com/file/d/1Lyvwv_8bhHDM5Wyz0LPmUrDYh8LxwnHo/view?usp=sharing" target="_blank">Setting Up APIs with Lambda +API Gateway and Fetch Data with AWS Lambda, Logic Tier and Data Tier
 </a></li>
       <li><a href="https://drive.google.com/file/d/1FgEe1aBDUIZXGOuMgVh7mI-6UAYw4ngg/view?usp=sharing" target="_blank">Website Delivery with CloudFront in Private, Presentation tier</a></li>
